<resources>
    <string name="app_name">RS CCF</string>
    <string name="storesman">storesman:</string>
    <string name="school_id">school id</string>
    <string name="password">password</string>
    <string name="full_name">full name</string>
    <string name="uniform_item">uniform item</string>
    <string name="qty">qty</string>
    <string name="reason_for_order">reason for order</string>
    <string name="order">Order</string>
    <string name="size">size</string>
    <string name="preferences">Preferences</string>
    <string name="feedback">Feedback</string>

    <string-array name="groups">
        <item>Army</item>
        <item>RAF</item>
    </string-array>
    <string-array name="ranks">
        <item>Rct</item>
        <item>Cdt</item>
        <item>L Cpl</item>
        <item>Cpl</item>
        <item>Sgt</item>
        <item>F/S Sgt</item>
        <item>CSM/CWO</item>
    </string-array>
</resources>
